--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
    <a href="#about">Claudia Simonelli</a>
  </p>
    <h3>
-   Assigments
+   Assignments
  </h3>
  <a href="#smilingworks">
    #1 Smiling works
